--- a/release-notes/orch/24.4.md
+++ b/release-notes/orch/24.4.md
@@ -6,6 +6,12 @@
 
 1.
 
+
+
+Добавлены новые статусы выполнения роботов. Теперь в интерфейсе Оркестратора доступны статусы **Стартует-Ожидает** и **Завершается работа**.
+https://azure-dos.s1.primo1.orch/PrimoCollection/Orchestrator/_workitems/edit/13087
+
+
 ## Исправленные ошибки 
 
 1.
