--- a/release-notes/orch/24.4.md
+++ b/release-notes/orch/24.4.md
@@ -14,7 +14,16 @@ https://azure-dos.s1.primo1.orch/PrimoCollection/Orchestrator/_workitems/edit/13
 
 ## Исправленные ошибки 
 
-1.
+1. Изменен статус ошибки **Нехватка лицензий** на более понятный **Достигнуто максимальное количество работающих роботов на машине**
+2. Исправлена ошибка в функции **Изменить статус в очереди**, вызывавшая нарушение ограничения внешнего ключа в таблице `ExchangeQueueValueEvents`и нарушение ограничения **NOT NULL** в столбце `LaunchChainKey` таблицы `RpaProjectQueue`  
+
+https://azure-dos.s1.primo1.orch/PrimoCollection/Orchestrator/_workitems/edit/11502   
+https://azure-dos.s1.primo1.orch/PrimoCollection/Orchestrator/_workitems/edit/11501
+
+## UI 3
+
+1. Исправлены ошибки с отображением статусов транзакций в элементах очереди. Теперь все статусы корректно отображаются в столбце **Статус**, что позволяет правильно применять фильтр по статусам.
+https://azure-dos.s1.primo1.orch/PrimoCollection/Orchestrator/_workitems/edit/17625
 
 ## Где найти
 [Скачать дистрибутив Primo RPA Orchestrator](https://disk.primo-rpa.ru/index.php/s/primo?path=%2FRelease).
